--- a/arch/arm64/configs/pine_nik_defconfig
+++ b/arch/arm64/configs/pine_nik_defconfig
@@ -41,8 +41,6 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mt6735"
-CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="pine_nik"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
@@ -211,7 +209,6 @@ CONFIG_UID_STAT=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6735"
-CONFIG_ARCH_MTK_PROJECT="pine_nik"
 # CONFIG_TARGET_COPY_OUT_ODM is not set
 CONFIG_MTK_SHARED_SDCARD=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
@@ -227,7 +224,6 @@ CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_LCM=y
-CONFIG_CUSTOM_KERNEL_LCM="r63417_fhd_dsi_cmd_truly_nt50358"
 CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT=y
 CONFIG_MTK_LENS=y
 CONFIG_MTK_LENS_DUMMYLENS_SUPPORT=y
@@ -243,15 +239,6 @@ CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_MTK_AAL_SUPPORT=y
 CONFIG_MTK_SENSOR_SUPPORT=y
-CONFIG_MTK_SENSORS_1_0=y
-CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
-CONFIG_MTK_MC3410_I2C=y
-CONFIG_CUSTOM_KERNEL_ALSPS=y
-CONFIG_MTK_CM36652=y
-CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
-CONFIG_MTK_ITG1010=y
-CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
-CONFIG_MTK_AKM09911=y
 CONFIG_MTK_HWMON=y
 CONFIG_MTK_BTCVSD=y
 CONFIG_MTK_BTIF=y
@@ -280,7 +267,6 @@ CONFIG_MTK_PWM=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_SMI_EXT=y
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
-CONFIG_USB_MTK_OTG=y
 CONFIG_MTK_USB2JTAG_SUPPORT=y
 CONFIG_MTK_VIBRATOR=y
 CONFIG_MTK_MEMCFG=y
@@ -330,16 +316,6 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_KEYBOARD_ATKBD is not set
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_MTK=y
-CONFIG_TOUCHSCREEN_MTK_GT1151=y
-CONFIG_GT1151_FIRMWARE="firmware1"
-CONFIG_GT1151_CONFIG="config3"
-CONFIG_GTP_DRIVER_SEND_CFG=y
-CONFIG_GTP_CUSTOM_CFG=y
-CONFIG_GTP_AUTO_UPDATE=y
-CONFIG_GTP_HEADER_FW_UPDATE=y
-CONFIG_GTP_CREATE_WR_NODE=y
-CONFIG_GTP_POWER_CTRL_SLEEP=y
 CONFIG_KEYBOARD_MTK=y
 CONFIG_TWOKEY_REBOOT_NORMAL_MODE=y
 CONFIG_TWOKEY_REBOOT_OTHER_MODE=y
@@ -357,7 +333,6 @@ CONFIG_SPI=y
 CONFIG_MTK_SPI=y
 CONFIG_MTK_SMART_BATTERY=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
-CONFIG_MTK_PUMP_EXPRESS_SUPPORT=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
@@ -510,3 +485,39 @@ CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+#
+#
+#
+# mod for pine by nik-kst
+#
+#
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="pine_nik"
+# CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="pine_nik"
+CONFIG_ARCH_MTK_PROJECT="pine_nik"
+# CONFIG_MTK_DTBO_FEATURE is not set
+CONFIG_MTK_LATE_MOUNT=y
+CONFIG_CUSTOM_KERNEL_LCM="r6135otp_hd720_dsi_vdo r6135_hd720_dsi_vdo nt35521s_hd720_dsi_vdo"
+CONFIG_LCM_HEIGHT="1280"
+CONFIG_LCM_WIDTH="720"
+CONFIG_MTK_SENSORS_1_0=y
+# CONFIG_CUSTOM_KERNEL_ACCELEROMETER is not set
+# CONFIG_MTK_MC3410_I2C is not set
+# CONFIG_CUSTOM_KERNEL_ALSPS is not set
+# CONFIG_MTK_CM36652 is not set
+# CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
+# CONFIG_MTK_ITG1010 is not set
+# CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
+# CONFIG_MTK_AKM09911 is not set
+CONFIG_USB_MTK_OTG=y
+CONFIG_TOUCHSCREEN_MTK=y
+CONFIG_TOUCHSCREEN_MTK_GT1151=y
+CONFIG_GT1151_FIRMWARE="firmware1"
+CONFIG_GT1151_CONFIG="config3"
+CONFIG_GTP_DRIVER_SEND_CFG=y
+CONFIG_GTP_CUSTOM_CFG=y
+CONFIG_GTP_AUTO_UPDATE=y
+CONFIG_GTP_HEADER_FW_UPDATE=y
+CONFIG_GTP_CREATE_WR_NODE=y
+CONFIG_GTP_POWER_CTRL_SLEEP=y
+CONFIG_MTK_PUMP_EXPRESS_SUPPORT=y
+
