focaltech_touch driver work commit

--- a/arch/arm64/boot/dts/pine_nik.dts
+++ b/arch/arm64/boot/dts/pine_nik.dts
@@ -187,7 +187,9 @@
 		headset-four-key-threshold = <0 58 121 192 450>;
 };
 &touch {
-	tpd-resolution = <1080 1920>;
+/*[nik-kst] focaltech_touch driver porting begin*/
+	tpd-resolution = <720 1280>;
+/*[nik-kst] focaltech_touch driver porting end*/
 	use-tpd-button = <0>;
 	tpd-key-num = <3>;
 	tpd-key-local= <139 172 158 0>;
